# biomassml

./: .cruft.json  .flake8  CONTRIBUTING.rst  LICENSE  README.md  clownfish.ipynb  model_GPR  model_GPR_retrained  run_fcnn.py  run_model.py  run_vime.py  setup.cfg  tox.ini
.github/workflows/: release.yml  tests.yml
conf/: config.yaml
conf/data/: default.yaml
conf/model/: default.yaml
conf/supervised/: config.yaml
conf/supervised/data/: default.yaml
conf/supervised/experiment/: gasification.yaml  gasification_pretrained.yaml  pretrained.yaml
conf/supervised/model/: default.yaml
conf/supervised/trainer/: default.yaml
conf/vime/: config.yaml
conf/vime/data/: default.yaml
conf/vime/model/: default.yaml
conf/vime/trainer/: default.yaml
data/: co2_data.csv  data_CO2ads_biomass.csv  data_CO2ads_biomass_properties.csv  data_GASIF_biomass.csv  data_NEW_biomasses.csv  gasification_stratified.csv
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
notebooks/: cluster_analysis.ipynb  feature_importance.ipynb  predictions_new_dataset.ipynb  train_GPR_model.ipynb
src/biomassml/: __init__.py  build_model.py  cli.py  coregionalized_regressor.py  feature_importance.py  feature_importance2.py  io.py  metrics.py  pipeline.py  plotting.py  predict.py  predict_outputs.py  utils.py  version.py
src/biomassml/callbacks/: backbone_finetuning.py  backbonefinetuning.py
src/biomassml/conf/: default.yaml
src/biomassml/conf/experiment/: methane.yaml
src/biomassml/data/: datamodule.py  dataset.py  kfolddatamodule.py  utils.py  vime_datamodule.py  vime_dataset.py
src/biomassml/models/: denoising_ae.py  fcnn.py  utils.py  vime.py
src/biomassml/trainers/: fcnn_trainer.py  utils.py  vime_trainer.py
src/biomassml/utils/: __init__.py  conservation_law.py  scaler.py
tests/: Feature_importance_GPR_12in4out_CO_H2_COMB_Edens_summary.ipynb  __init__.py  biomassGASIF_GPR model_summary.ipynb  test_version.py
