##########################
# Setup.py Configuration #
##########################
[metadata]
name = biomassml
version = 0.0.1-dev
description = Predicting gasification properties of biomasses
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/kjappelbaum/biomassml
download_url = https://github.com/kjappelbaum/biomassml/releases
project_urls =
    Bug Tracker = https://github.com/kjappelbaum/biomassml/issues
    Source Code = https://github.com/kjappelbaum/biomassml

# Author information
author = Victoria Gill, Kevin Maik Jablonka
author_email = mail@kjablonka.com
maintainer = Victoria Gill, Kevin Maik Jablonka
maintainer_email = mail@kjablonka.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =

[options]
install_requires =
    scikit-learn
    pandas
    GPy
    loguru
    click 

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
lint = 
    isort
    black
    flake8
    pre-commit
    bumpversion
tests =
    pytest
    tox
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext

[options.entry_points]
console_scripts =
    biomassml = biomassml.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = biomassml
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/biomassml
    .tox/*/lib/python*/site-packages/biomassml

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
